@@ -33,7 +33,7 @@ make-dirs=1
 
 [nosetests]
 verbose=True
-verbosity=2
+verbosity=1
 detailed-errors=True
 with-doctest=True
 with-coverage=True
